--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0034)https://thecollectivesupplies.com/ -->
 <html class="js svg flexbox csstransforms" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,9 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="">
-    <meta name="Description" content="Spark Shopify theme developed by HaloTheme">
     <link rel="canonical" href="#">
-    <link rel="shortcut icon" href="https://cdn.shopify.com/s/files/1/0593/6368/8609/files/Untitled-1_32x32.png?v=1631133302" type="image/png">
+    <link rel="shortcut icon" href="" type="image/png">
     <title>Mensch Supply | Certified Minority Owned Business </title>
     <meta name="description"
         content="Based in Florida, we are the largest Minority Certified platform offering office, jansan, industrial and commercial building maintenance supplies for government entities, contractors, and DIYers. Best in Class Products, and Partners, and Service.">
