--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     <meta name="description"
         content="Based in Florida, we are the largest Minority Certified platform offering office, jansan, industrial and commercial building maintenance supplies for government entities, contractors, and DIYers. Best in Class Products, and Partners, and Service.">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Mensch Supply | Certified MRO &amp; Office &amp; JanSan Products">
-    <meta property="og:description"
-        content="Based in Florida, we are the largest Minority Certified platform offering office, jansan, industrial and commercial building maintenance supplies for government entities, contractors, and DIYers. Best in Class Products, and Partners, and Service.">
+    <meta property="og:title" content="Mensch Supply | Certified Certified Minority Owned Business">
+    <meta property="og:description" content="This is a demo WebSite for Mensch Supply">
     <meta property="og:url" content=href="#">
     <meta property="og:site_name" content="Mensch Supply">
     <!-- /snippets/social-meta-tags.liquid -->
     <meta property="og:site_name" content="Mensch Supply">
     <meta property="og:url" content=href="#">
-    <meta property="og:title" content="Mensch Supply | Certified MRO &amp; Office &amp; JanSan Products">
+    <meta property="og:title" content="Mensch Supply | Certified Certified Minority Owned Business">
     <meta property="og:type" content="website">
     <meta property="og:description"
         content="Based in Florida, we are the largest Minority Certified platform offering office, jansan, industrial and commercial building maintenance supplies for government entities, contractors, and DIYers. Best in Class Products, and Partners, and Service.">
